# cookiecutter-cpp-simple

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: CMakeLists.txt
{{ cookiecutter.repo_name }}/src/: myclass.cpp  myclass.hpp
{{ cookiecutter.repo_name }}/tests/: CMakeLists.txt  SmokeTests.cpp
